@@ -28,6 +28,8 @@
 * Add - Support business account branding settings.
 * Update - Capture order-related metadata not captured by mobile app for in-person payment transactions.
 * Add - REST endpoint to print IPP receipts.
+* Add - Deposit Status to Transaction export.
+
 
 = 3.3.0 - 2021-11-18 =
 * Add - Add Idempotency Key to POST headers.
